Fixed stylesheet linkage and added missing color cells code

--- a/CSS Color Features Project/style.css
+++ b/CSS Color Features Project/style.css
@@ -186,7 +186,7 @@ html {
     margin-bottom: 1.25rem;
     font-size: 1.125rem;
     font-weight: bold;
-  
+    color: #9b9b9b
   }
   
   .color .swatch {
@@ -237,12 +237,12 @@ html {
   /* Red Swatches */
   
   .reds .base-color {
-    color: #ff002b;
+    color: hsl(350, 100%, 50%);
   }
   
   /* Red lightness decreases by 15 */
   .reds .lightness .color-1 {
-  
+    background-color: hsl(350, 100%, 80%)
   }
   
   .reds .lightness .color-2 {
@@ -263,7 +263,7 @@ html {
   
   /* Red saturation decreases by 15 */
   .reds .saturation .color-1 {
-  
+   background-color: hsl(350, 100%, 50%);
   }
   
   .reds .saturation .color-2 {
@@ -284,6 +284,7 @@ html {
   
   /* Red hue increases by 15 */
   .reds .hue .color-1 {
+    background-color: hsl(320, 100%, 50%);
   
   }
   
@@ -306,12 +307,12 @@ html {
   /* Green Swatches */
   
   .greens .base-color {
-    color: #00ff2a;
+    color: hsl(130, 100%, 50%);
   }
   
   /* Green lightness decreases by 20 */
   .greens .lightness .color-1 {
-  
+    background-color: hsl(103, 100%, 90%);
   }
   
   .greens .lightness .color-2 {
@@ -332,7 +333,7 @@ html {
   
   /* Green saturation decreases by 20 */
   .greens .saturation .color-1 {
-  
+    background-color: hsl(130, 100%, 50%);
   }
   
   .greens .saturation .color-2 {
@@ -353,7 +354,7 @@ html {
   
   /* Green hue increases by 22 */
   .greens .hue .color-1 {
-  
+    background-color: hsl(88, 100%, 50%);
   }
   
   .greens .hue .color-2 {
@@ -375,12 +376,12 @@ html {
   /* Blue Swatches */
   
   .blues .base-color {
-    color: #0055ff;
+    color: hsl(220, 100%, 50%);
   }
   
   /* Blue lightness decreases by 20 */
   .blues .lightness .color-1 {
-  
+    background-color: hsl(220, 100%, 90%);
   }
   
   .blues .lightness .color-2 {
@@ -401,7 +402,7 @@ html {
   
   /* Blue saturation decreases by 20 */
   .blues .saturation .color-1 {
-  
+    background-color: hsl(220, 100%, 50%);
   }
   
   .blues .saturation .color-2 {
@@ -422,7 +423,7 @@ html {
   
   /* Blue hue decreases by 20 */
   .blues .hue .color-1 {
-  
+    background-color: hsl(260, 100%, 50%);
   }
   
   .blues .hue .color-2 {
